--- a/slp/linear_regression.ipynb
+++ b/slp/linear_regression.ipynb
@@ -9,21 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mDownloading\u001b[39m https://github.com/retraigo/classy-lala/releases/download/v1.0.1/classy.dll\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import {\n",
     "  OLSSolver\n",
-    "} from \"jsr:@lala/classy@1.0.1\";"
+    "} from \"jsr:@lala/classy@1.2.2\";\n",
+    "\n",
+    "import { r2, rmse, Matrix } from \"jsr:@lala/appraisal@0.7.5\";"
    ]
   },
   {
@@ -37,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +40,7 @@
        "[ [ \u001b[33m115\u001b[39m, \u001b[33m74\u001b[39m ], [ \u001b[33m125\u001b[39m, \u001b[33m90\u001b[39m ], [ \u001b[33m666\u001b[39m, \u001b[33m497\u001b[39m ], [ \u001b[33m149\u001b[39m, \u001b[33m76\u001b[39m ], [ \u001b[33m498\u001b[39m, \u001b[33m207\u001b[39m ] ]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,12 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "const X_train = { data: Float64Array.from(X.flat()), shape: [5, 3] };\n",
-    "const y_train = { data: Float64Array.from(y.flat()), shape: [5, 2] };\n"
+    "const X_train = new Matrix(X, \"f64\");\n",
+    "const y_train = new Matrix(y, \"f64\");"
    ]
   },
   {
@@ -77,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training time: 0.3636999999998807ms\n"
+      "training time: 0.08760000002803281ms\n"
      ]
     }
    ],
@@ -121,43 +115,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m ]"
+       "[ \u001b[33m5\u001b[39m, \u001b[33m2\u001b[39m ]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "const res = solver.predict({data: Float64Array.from([10, 13, 8]), shape: [1, 3]})\n",
+    "const res = solver.predict(X_train)\n",
     "res.shape"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check R-squared score (should be close to 1)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[ [ \u001b[33m164.00000000000037\u001b[39m, \u001b[33m111.00000000000037\u001b[39m ], [ \u001b[33m164\u001b[39m, \u001b[33m111\u001b[39m ] ]"
+       "\u001b[33m0.9999999999999966\u001b[39m"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[Array.from(res.data), [10 * 9 + 13 * 2 + 8 * 5 + 8, 10 * 3 + 13 * 4 + 8 * 3 + 5]]"
+    "r2(res.data, y_train.data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check Root Mean Square Error (smaller = better)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[33m5.908708654470939e-13\u001b[39m"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rmse(res.data, y_train.data)"
    ]
   }
  ],
