--- a/slp/logistic_regression.ipynb
+++ b/slp/logistic_regression.ipynb
@@ -9,31 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mDownloading\u001b[39m https://github.com/retraigo/classy-lala/releases/download/v1.0.1/classy.dll\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import { parse } from \"jsr:@std/csv\";\n",
+    "import { parse } from \"jsr:@std/csv@0.218\";\n",
     "import {\n",
     "  ClassificationReport,\n",
     "  Matrix,\n",
     "  useSplit,\n",
     "  CategoricalEncoder,\n",
-    "} from \"jsr:@lala/appraisal@0.4.0\";\n",
+    "} from \"jsr:@lala/appraisal@0.7.5\";\n",
     "import {\n",
     "  SagSolver,\n",
     "  softmaxActivation,\n",
     "  rmsPropOptimizer,\n",
     "  crossEntropy,\n",
-    "} from \"jsr:@lala/classy@1.0.1\";\n"
+    "} from \"jsr:@lala/classy@1.2.2\";\n"
    ]
   },
   {
@@ -45,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +68,7 @@
        "]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +108,7 @@
        "4.9\t3.1\t1.5\t0.1\n"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,13 +116,13 @@
    "source": [
     "const x = data.map((fl, i) => fl.slice(0, 4).map(Number));\n",
     "\n",
-    "const X = new Matrix<\"f64\">(Float64Array.from(x.flat()), {shape: [data.length]})\n",
+    "const X = new Matrix(x, \"f64\")\n",
     "X.slice(0, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +142,7 @@
        "]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -191,20 +183,20 @@
        "1\t0\t0\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "const encoder = new CategoricalEncoder()\n",
-    "const y = encoder.fit(y_pre).transform<\"f64\">(y_pre, \"f64\")\n",
+    "const y = encoder.fit(y_pre).transform(y_pre, \"f64\")\n",
     "y.slice(0, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +205,7 @@
        "[ [ \u001b[33m150\u001b[39m, \u001b[33m4\u001b[39m ], [ \u001b[33m150\u001b[39m, \u001b[33m3\u001b[39m ] ]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,29 +223,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><DTh>idx</th><DTh>0</th><DTh>1</th><DTh>2</th><DTh>3</th></tr></thead><tr><td><strong>0</strong></td><td>4.7</td><td>3.2</td><td>1.3</td><td>0.2</td></tr><tr><td><strong>1</strong></td><td>4.6</td><td>3.1</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>2</strong></td><td>5</td><td>3.6</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>3</strong></td><td>4.6</td><td>3.4</td><td>1.4</td><td>0.3</td></tr><tr><td><strong>4</strong></td><td>5</td><td>3.4</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>5</strong></td><td>4.4</td><td>2.9</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>6</strong></td><td>4.9</td><td>3.1</td><td>1.5</td><td>0.1</td></tr><tr><td><strong>7</strong></td><td>5.4</td><td>3.7</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>8</strong></td><td>4.8</td><td>3.4</td><td>1.6</td><td>0.2</td></tr><tr><td><strong>9</strong></td><td>4.8</td><td>3</td><td>1.4</td><td>0.1</td></tr></table>"
+       "<thead><tr><DTh>idx</th><DTh>0</th><DTh>1</th><DTh>2</th><DTh>3</th></tr></thead><tr><td><strong>0</strong></td><td>5.1</td><td>3.5</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>1</strong></td><td>4.9</td><td>3</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>2</strong></td><td>4.7</td><td>3.2</td><td>1.3</td><td>0.2</td></tr><tr><td><strong>3</strong></td><td>4.6</td><td>3.1</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>4</strong></td><td>5</td><td>3.6</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>5</strong></td><td>5.4</td><td>3.9</td><td>1.7</td><td>0.4</td></tr><tr><td><strong>6</strong></td><td>4.8</td><td>3.4</td><td>1.6</td><td>0.2</td></tr><tr><td><strong>7</strong></td><td>4.8</td><td>3</td><td>1.4</td><td>0.1</td></tr><tr><td><strong>8</strong></td><td>5.8</td><td>4</td><td>1.2</td><td>0.2</td></tr><tr><td><strong>9</strong></td><td>5.7</td><td>4.4</td><td>1.5</td><td>0.4</td></tr></table>"
       ],
       "text/plain": [
+       "5.1\t3.5\t1.4\t0.2\n",
+       "4.9\t3\t1.4\t0.2\n",
        "4.7\t3.2\t1.3\t0.2\n",
        "4.6\t3.1\t1.5\t0.2\n",
        "5\t3.6\t1.4\t0.2\n",
-       "4.6\t3.4\t1.4\t0.3\n",
-       "5\t3.4\t1.5\t0.2\n",
-       "4.4\t2.9\t1.4\t0.2\n",
-       "4.9\t3.1\t1.5\t0.1\n",
-       "5.4\t3.7\t1.5\t0.2\n",
+       "5.4\t3.9\t1.7\t0.4\n",
        "4.8\t3.4\t1.6\t0.2\n",
-       "4.8\t3\t1.4\t0.1\n"
+       "4.8\t3\t1.4\t0.1\n",
+       "5.8\t4\t1.2\t0.2\n",
+       "5.7\t4.4\t1.5\t0.4\n"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +322,7 @@
        "[ \u001b[33m45\u001b[39m, \u001b[33m3\u001b[39m ]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,20 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Float64Array(3) [\n",
-       "  \u001b[33m0.9999999999999838\u001b[39m,\n",
-       "  \u001b[33m1.6262238633880303e-14\u001b[39m,\n",
-       "  \u001b[33m2.782166297078632e-26\u001b[39m\n",
+       "  \u001b[33m0.9999999999977868\u001b[39m,\n",
+       "  \u001b[33m2.2131906052687517e-12\u001b[39m,\n",
+       "  \u001b[33m1.5618941913383692e-23\u001b[39m\n",
        "]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +389,7 @@
        "1\t0\t0\n"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -438,12 +430,12 @@
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
@@ -455,12 +447,12 @@
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
@@ -470,7 +462,7 @@
        "]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,25 +480,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th>Class</th><th>Precision</th><th>F1Score</th><th>Recall</th><th>Support</th></tr></thead><tr><td>Iris-setosa</td><td>1</td><td>1</td><td>1</td><td>18</td></tr><tr><td>Iris-versicolor</td><td>1</td><td>1</td><td>1</td><td>11</td></tr><tr><td>Iris-virginica</td><td>1</td><td>1</td><td>1</td><td>16</td></tr><tr><td>Accuracy</td><td></td><td></td><td>1</td><td>45</td></tr></table>"
+       "<table><thead><tr><th>Class</th><th>Precision</th><th>F1Score</th><th>Recall</th><th>Support</th></tr></thead><tr><td>Iris-setosa</td><td>1</td><td>1</td><td>1</td><td>14</td></tr><tr><td>Iris-versicolor</td><td>1</td><td>1</td><td>1</td><td>13</td></tr><tr><td>Iris-virginica</td><td>0.9473684210526315</td><td>0.972972972972973</td><td>1</td><td>18</td></tr><tr><td>Accuracy</td><td></td><td></td><td>0.9925925925925926</td><td>45</td></tr></table>"
       ],
       "text/plain": [
        "Classification Report\n",
        "Number of classes:\t3\n",
        "Class\tPreci\tF1\tRec\tSup\n",
-       "Iris-setosa\t1\t1\t1\t18\n",
-       "Iris-versicolor\t1\t1\t1\t11\n",
-       "Iris-virginica\t1\t1\t1\t16\n",
-       "Accuracy\t\t1\t45"
+       "Iris-setosa\t1\t1\t1\t14\n",
+       "Iris-versicolor\t1\t1\t1\t13\n",
+       "Iris-virginica\t0.9473684210526315\t0.972972972972973\t1\t18\n",
+       "Accuracy\t\t0.9925925925925926\t45"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
